test_regress/t/t_modport_export_bad.out
%Error: t/t_modport_export_bad.v:20:8: Out-of-block definition port is not an interface port: clk
   20 |   task clk.send(input logic [7:0] val);
      |        ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Internal Error: t/t_modport_export_bad.v:20:8: ../V3LinkDot.cpp:#: Module/etc never assigned a symbol entry?
   20 |   task clk.send(input logic [7:0] val);
      |        ^~~
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
